sas-core/main/default/objects/Knowledge__kav/fields/Contentful_Id__c.field-meta.xml
<CustomField>
  <fullName>Contentful_Id__c</fullName>
  <label>Contentful Id</label>
  <length>255</length>
  <type>Text</type>
</CustomField>