sas-core/main/default/objects/Knowledge__kav/fields/FCS_SubType__c.field-meta.xml
<CustomField>
    <fullName>FCS_SubType__c</fullName>
    <label>Sub-type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FCS_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Allowances</fullName>
            </value>
            <value>
                <fullName>Allowances - hand baggage</fullName>
            </value>
            <value>
                <fullName>Animals</fullName>
            </value>
            <value>
                <fullName>Assistance</fullName>
            </value>
            <value>
                <fullName>Baggage general</fullName>
            </value>
            <value>
                <fullName>Cobranded with EuroBonus</fullName>
            </value>
            <value>
                <fullName>Dangerous Goods/Weapons</fullName>
            </value>
            <value>
                <fullName>Death of passenger or the passenger&apos;s immediate family - SAS</fullName>
            </value>
            <value>
                <fullName>Earning points</fullName>
            </value>
            <value>
                <fullName>EB Highlights/Error reports</fullName>
            </value>
            <value>
                <fullName>EuroBonus Program</fullName>
            </value>
            <value>
                <fullName>Excess baggage - Charge &amp; Keep</fullName>
            </value>
            <value>
                <fullName>Excess baggage - Charges</fullName>
            </value>
            <value>
                <fullName>Excess baggage - Prepaid XBAG</fullName>
            </value>
            <value>
                <fullName>Forbidden items in hand baggage</fullName>
            </value>
            <value>
                <fullName>Former Partners</fullName>
            </value>
            <value>
                <fullName>Form of Payment</fullName>
            </value>
            <value>
                <fullName>Form of Payment-Advanced</fullName>
            </value>
            <value>
                <fullName>Fragile and special value items</fullName>
            </value>
            <value>
                <fullName>Give Away Membership</fullName>
            </value>
            <value>
                <fullName>Hotel Partners</fullName>
            </value>
            <value>
                <fullName>IATA baggage resolution 302</fullName>
            </value>
            <value>
                <fullName>Life Time Gold</fullName>
            </value>
            <value>
                <fullName>Meals</fullName>
            </value>
            <value>
                <fullName>Meals - Advanced</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Membership levels</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Musical Instruments</fullName>
            </value>
            <value>
                <fullName>Name change and name correction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>