sas-core/main/default/objects/Knowledge__kav/fields/FCS_Type__c.field-meta.xml
<CustomField>
    <fullName>FCS_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EuroBonus</fullName>
            </value>
            <value>
                <fullName>Reservations</fullName>
            </value>
            <value>
                <fullName>Functional Product Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>