sas-core/main/default/objects/Knowledge__kav/recordTypes/Functional_Product_Support.recordType-meta.xml
<RecordType>
    <fullName>Functional_Product_Support</fullName>
    <active>true</active>
    <description>Record type for the functional product support knowledge articles.</description>
    <label>Functional Product Support</label>
</RecordType>